IOS Image picker done SAP cloud classifier pending

--- a/MyiOSTrialImagePicker/MyiOSTrialImagePicker/Info.plist
+++ b/MyiOSTrialImagePicker/MyiOSTrialImagePicker/Info.plist
@@ -34,6 +34,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Lets Classify Images using SAP Cloud Platform</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Live Classification via Camera</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
